# cangjie-card

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
.github/workflows/: build.yml
api/: handler.rs  refresh.rs
lib/: analysis.rs  mod.rs  models.rs  repository.rs  storage.rs  utils.rs
scripts/: build_tar.py
src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/badge/: route.ts
src/app/result/: page.tsx
src/components/: Navbar.tsx  TrackingScript.tsx
src/components/analysis/: AnalysisLoading.tsx  Badge.tsx  RefreshButton.tsx
src/components/ui/: copy-button.tsx  copy-markdown-button.tsx
src/lib/: badge.ts  db.ts  grading.ts  types.ts
