[package]
name = "cangjie-card"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "fs"] }
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = { version = "1" }
include-bytes-zstd = "0.1"
tar = "0.4"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "handler"
path = "api/handler.rs"