[package]
name = "cangjie-card"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = { version = "1" }
include-bytes-zstd = "0.1"
tar = "0.4"
url = "2.5.4"
git2 = { version = "0.20.0", default-features = false, features = [
    "https", "openssl-probe", "openssl-sys",
    "vendored-libgit2", "vendored-openssl"
] }
redis = { version = "0.29.0", features = ["tls-native-tls"] }
zstd = "0.13.3"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
toml = "0.8"
rand = "0.9"
sysinfo = "0.33"


[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
octocrab = { version = "0.43", features = ["stream"] }
futures-util = "0.3"
zstd = "0.13.3"

[[bin]]
name = "refresh"
path = "api/refresh.rs"

[profile.dev]
debug = 0
